# cross_domain_client

./: .gitignore  .gitmodules  CMakeLists.txt  clientconfig.cpp  clientconfig.h  constans.h  cross_domain_client.qrc  cross_domain_client_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h
dataEngine/: CMakeLists.txt
dataEngine/include/: dataPacket.h  dataProvider.h  directoryItemInfo.h  domainInfo.h  userInfo.h  userPrivilige.h
dataEngine/src/: dataPacket.cpp  dataProvider.cpp  directoryItemInfo.cpp  domainInfo.cpp  userInfo.cpp
encryption/: CMakeLists.txt
encryption/include/: aesHelper.h  base64Helper.h  hashGenerator.h  rsaHelper.h
encryption/src/: aesHelper.cpp  base64Helper.cpp  hashGenerator.cpp  rsaHelper.cpp
framework/: CMakeLists.txt
framework/include/: change_skin_widget.h  clabel.h  common.h  drop_shadow_widget.h  msg_box.h  push_button.h  shadow_widget.h  skin_widget.h  system_tray.h  title_widget.h  tool_button.h  util.h
framework/src/: change_skin_widget.cpp  clabel.cpp  drop_shadow_widget.cpp  msg_box.cpp  push_button.cpp  shadow_widget.cpp  skin_widget.cpp  system_tray.cpp  title_widget.cpp  tool_button.cpp  util.cpp
http/: QHttpmanger.h
model/: fileItemInfo.h  fileItemModel.cpp  fileItemModel.h  fileItemWidget.cpp  fileItemWidget.h  iconConstants.h  userInfo.h
resource/: style.qss
third_partys/: CMakeLists.txt
utils/: CMakeLists.txt
utils/header/: arrayBuffer.h  arrayScope.h  commonUtil.h  fileHelper.h  imageUtil.h  stringUtil.h
utils/src/: commonUtil.cpp  fileHelper.cpp  stringUtil.cpp
widgets/: addFolderDialog.cpp  addFolderDialog.h  exploreBarWidget.cpp  exploreBarWidget.h  fileExploreWidget.cpp  fileExploreWidget.h  filesconstans.h  loginwidget.cpp  loginwidget.h  messageBoxDialog.cpp  messageBoxDialog.h  operateBarWidget.cpp  operateBarWidget.h  registerWidget.cpp  registerWidget.h  uploadFileDialog.cpp  uploadFileDialog.h
